fixed minor error

--- a/testplot.html
+++ b/testplot.html
@@ -314,7 +314,7 @@
         var data = this.data; // Property values
 
         if (oldData.colour != data.colour)
-          generateLines(sector, data.colour);
+          generateLines(data.sector, data.colour);
       }
     })
 
