--- a/testplot.html
+++ b/testplot.html
@@ -40,7 +40,7 @@
 
             selectedElement.setAttribute('positionX', newCoords[0]);
             selectedElement.setAttribute('positionZ', newCoords[2]);
-            selectedElement.setAttribute('colour', 'blue');
+            selectedElement.setAttribute('colour', '#FFF');
 
             holding = false;
           }else{
