--- a/vrplot.html
+++ b/vrplot.html
@@ -4,6 +4,7 @@
 <head>
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+  <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.0/dist/aframe-extras.min.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -342,7 +343,7 @@
     <a-assets>
       <img id="ground" src="ground.png">
     </a-assets>
-    <a-camera look-controls wasd-controls='easing:10; fly:true'>
+    <a-camera look-controls keyboard-controls>
       <a-cursor></a-cursor>
     </a-camera>
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
