--- a/vrplot.html
+++ b/vrplot.html
@@ -5,6 +5,7 @@
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
   <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.0/dist/aframe-extras.min.js"></script>
+  <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -343,9 +344,16 @@
     <a-assets>
       <img id="ground" src="ground.png">
     </a-assets>
-    <a-camera look-controls keyboard-controls>
+    <!--<a-camera look-controls keyboard-controls>
       <a-cursor></a-cursor>
-    </a-camera>
+    </a-camera>-->
+    <a-entity id="cameraRig">
+      <!-- camera -->
+      <a-entity id="head" camera wasd-controls look-controls></a-entity>
+      <!-- hand controls -->
+      <a-entity id="left-hand" teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;"></a-entity>
+      <a-entity id="right-hand" teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;"></a-entity>
+    </a-entity>
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
     <a-plane color='#CCC' height="500" width="500" rotation="-90 0 0"></a-plane>
     <!--<a-entity laser-controls="hand: right" controller-listener></a-entity>
