--- a/vrplot.html
+++ b/vrplot.html
@@ -352,7 +352,7 @@
       <a-entity id="head" camera wasd-controls look-controls></a-entity>
       <!-- hand controls -->
       <a-entity id="left-hand" teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;" vive-controls="hand: left"></a-entity>
-      <a-entity id="right-hand" teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;" vive-controls="hand: right"></a-entity>
+      <a-entity id="right-hand" controller-listener laser-controls="hand: right"></a-entity>
     </a-entity>
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
     <a-plane color='#CCC' height="500" width="500" rotation="-90 0 0"></a-plane>
