--- a/vrplot.html
+++ b/vrplot.html
@@ -286,7 +286,7 @@
             }
           }
           
-          mesh.position.set(data.positionX, 0, data.positionZ);
+          mesh.position.set(data.positionX, data.height/2, data.positionZ);
           
           geometry.attributes.position.needsUpdate = true;
 -         geometry.computeBoundingSphere();
