--- a/vrplot.html
+++ b/vrplot.html
@@ -239,6 +239,8 @@
           
           geometry = new THREE.BoxBufferGeometry(4, data.height, 4, 1, 1, 1);
           mesh = new THREE.Mesh(geometry, material);
+          mesh.position.set(data.positionX, data.height/2, data.positionZ);
+          
           this.el.setObject3D(this.attrName, this.mesh);
         }
 
