--- a/vrplot.html
+++ b/vrplot.html
@@ -218,10 +218,10 @@
           visible: true
         });
 
-        //geometry = this.geometry = new THREE.BoxBufferGeometry(4, data.height, 4, 1, 1, 1);
+        geometry = this.geometry = new THREE.BoxBufferGeometry(4, data.height, 4, 1, 1, 1);
 
-        //this.mesh = new THREE.Mesh(geometry, material);
-        //this.el.setObject3D(this.attrName, this.mesh);
+        this.mesh = new THREE.Mesh(geometry, material);
+        this.el.setObject3D('mesh', this.mesh);
       },
 
       update: function(oldData) {
@@ -234,7 +234,7 @@
         
         // Height change
         if (data.height !== oldData.height){
-          this.el.removeObject3D(this.attrName, this.mesh);
+          this.el.removeObject3D('mesh');
           if (!(typeof something === "undefined")){
             geometry.dispose();
           }
@@ -243,7 +243,7 @@
           mesh = new THREE.Mesh(geometry, material);
           mesh.position.set(data.positionX, data.height/2, data.positionZ);
           
-          this.el.setObject3D(this.attrName, this.mesh);
+          this.el.setObject3D('mesh', this.mesh);
         }
 
         // Geometry change
@@ -298,7 +298,7 @@
       },
 
       remove: function() {
-        this.el.removeObject3D(this.attrName, this.mesh);
+        this.el.removeObject3D('mesh');
       }
     })
 
