--- a/vrplot.html
+++ b/vrplot.html
@@ -119,7 +119,7 @@
       */
     })
     
-    d3.selectAll("a-axis").attr("needsUpdate", "true);
+    d3.selectAll("a-axis").attr("needsUpdate", "true");
 
     function generateLines(sector, lineColour) {
       if (sector < 0) {
