--- a/vrplot.html
+++ b/vrplot.html
@@ -119,7 +119,7 @@
       */
     })
     
-    d3.selectAll("a-axis").attr("needsUpdate", "true");
+    d3.selectAll("a-axis").attr("needsupdate", "true");
 
     function generateLines(sector, lineColour) {
       if (sector < 0) {
@@ -342,7 +342,7 @@
         maxvalue: 'axis.maxValue',
         minvalue: 'axis.minValue',
         linecolour: 'axis.linecolour',
-        needsUpdate: 'axis.needsUpdate'
+        needsupdate: 'axis.needsUpdate'
       }
     })
 
