--- a/vrplot.html
+++ b/vrplot.html
@@ -117,9 +117,9 @@
                 .attr("height", height)
                 .attr("width", width);
       */
+      
+      d3.select("a-scene").selectAll("a-axis").attr("needsupdate", "true");
     });
-    
-    d3.selectAll("a-axis").attr("needsupdate", "true");
 
     function generateLines(sector, lineColour) {
       if (sector < 0) {
