--- a/vrplot.html
+++ b/vrplot.html
@@ -299,9 +299,9 @@
         
         mesh.position.set(data.positionX, data.height/2, data.positionZ);
           
-        if (data.needsUpdate === 'true'){
+        //if (data.needsUpdate === 'true'){
           data.needsUpdate = 'false';
-        }
+        //}
         //geometry.attributes.position.needsUpdate = true;
         //geometry.computeBoundingSphere();
       },
