--- a/vrplot.html
+++ b/vrplot.html
@@ -221,7 +221,7 @@
         geometry = this.geometry = new THREE.BoxBufferGeometry(4, data.height, 4, 1, 1, 1);
 
         this.mesh = new THREE.Mesh(geometry, material);
-        mesh.position.set(data.positionX, data.height/2, data.positionZ);
+        this.mesh.position.set(data.positionX, data.height/2, data.positionZ);
         
         this.el.setObject3D('mesh', this.mesh);
       },
