--- a/vrplot.html
+++ b/vrplot.html
@@ -52,7 +52,7 @@
             selectedElement.setAttribute('colour', 'orange');
             var axis = selectedElement.getAttribute('axis');
             
-            if (!(typeof axis === "undefined") {
+            if (!(typeof axis === "undefined")) {
               // Axis
 
               holding = true;
