--- a/vrplot.html
+++ b/vrplot.html
@@ -81,6 +81,7 @@
       init: function () {
         this.pressed = {};
         this.position = {};
+        var el = this.el;
         
         el.addEventListener('triggerup', this.onTriggerUp);
         el.addEventListener('triggerdown', this.onTriggerDown);
