--- a/vrplot.html
+++ b/vrplot.html
@@ -5,7 +5,7 @@
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
   <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
-  <script src="aframe.js"></script>
+  <script src="generatescene.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
