--- a/vrplot.html
+++ b/vrplot.html
@@ -11,11 +11,11 @@
 
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene>
-      <a-entity id="cameraRig">
+      <a-entity id="cameraRig" movement-controls>
         <!-- camera -->
         <a-entity id="head" camera wasd-controls look-controls></a-entity>
         <!-- hand controls -->
-        <a-entity id="left-hand" movement-listener="cameraRig: #cameraRig;" vive-controls="hand: left"></a-entity>
+        <a-entity id="left-hand" vive-controls="hand: left"></a-entity>
         <a-entity id="right-hand" controller-listener laser-controls="hand: right" line="color: red"></a-entity>
       </a-entity>
       <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
