--- a/vrplot.html
+++ b/vrplot.html
@@ -11,7 +11,7 @@
 
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene>
-      <a-entity id="cameraRig">
+      <a-entity id="cameraRig" rotation="0 180 0">
         <!-- camera -->
         <a-entity id="head" camera wasd-controls look-controls></a-entity>
         <!-- hand controls -->
