--- a/vrplot.html
+++ b/vrplot.html
@@ -15,7 +15,9 @@
         <!-- camera -->
         <a-entity id="head" camera wasd-controls look-controls></a-entity>
         <!-- hand controls -->
-        <a-entity id="left-hand" movement-listener="cameraRig: #cameraRig" hand-controls="left"></a-entity>
+        <a-entity id="left-hand" movement-listener="cameraRig: #cameraRig" hand-controls="left">
+          <a-text value="Squeeze hand to move backward\nPull trigger to move forward" position="0 2 0"></a-text>
+        </a-entity>
         <a-entity id="right-hand" controller-listener laser-controls="hand: right" line="color: red"></a-entity>
       </a-entity>
       <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
