--- a/vrplot.html
+++ b/vrplot.html
@@ -19,7 +19,7 @@
           <a-text value="Squeeze hand to move backward Pull trigger to move forward" position="0.14 0.2 0" rotation="0 0 -90" wrap-count="27" scale="0.1 0.1 0.1"></a-text>
         </a-entity>
         <a-entity id="right-hand" controller-listener laser-controls="hand: right" line="color: red">
-          <a-text value="Push the middle pad to select axis. Push again to choose new position" position="0.14 0.2 0" rotation="0 0 -90" wrap-count="27" scale="0.1 0.1 0.1"></a-text>
+          <a-text value="Push the middle pad to select axis Push again to choose new position" position="-0.2 0.1 0" rotation="0 0 0" wrap-count="30" scale="0.1 0.1 0.1"></a-text>
         </a-entity>
       </a-entity>
       <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
